Correct alignment of the labels

--- a/style.css
+++ b/style.css
@@ -65,7 +65,6 @@
   justify-content: center;
   margin-bottom: 20px;
   flex-wrap: wrap;
-  width: max-content;
 }
 .TechRadar .labels a {
   white-space: nowrap;
